Editable new poll

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+      <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
       <link rel="stylesheet" href="bower_components/roboto-fontface/css/roboto-fontface.css" />
       <!-- endbower -->
     <!-- endbuild -->
@@ -59,6 +60,7 @@
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
@@ -78,6 +80,10 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.directive.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/new_poll/new_poll.controller.js"></script>
+          <script src="app/new_poll/new_poll.js"></script>
+          <script src="app/new_poll/new_poll.service.js"></script>
+          <script src="app/new_poll/polls.directive.js"></script>
           <script src="app/polls/polls.controller.js"></script>
           <script src="app/polls/polls.directive.js"></script>
           <script src="app/polls/polls.js"></script>
