--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,9 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/answer_poll/answer_poll.controller.js"></script>
+          <script src="app/answer_poll/answer_poll.js"></script>
+          <script src="app/answer_poll/answer_poll.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.directive.js"></script>
           <script src="app/main/main.js"></script>
