--- a/client/index.html
+++ b/client/index.html
@@ -90,6 +90,8 @@
           <script src="app/polls/polls.directive.js"></script>
           <script src="app/polls/polls.js"></script>
           <script src="app/polls/polls.service.js"></script>
+          <script src="app/view_answers/view_answers.controller.js"></script>
+          <script src="app/view_answers/view_answers.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
