--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
           <script src="app/answer_poll/answer_poll.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.directive.js"></script>
+          <script src="app/main/main.filter.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/new_poll/new_poll.controller.js"></script>
           <script src="app/new_poll/new_poll.js"></script>
