add dependency to Q

--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,7 @@
           <script src="app/answer_poll/answer_poll.controller.js"></script>
           <script src="app/answer_poll/answer_poll.js"></script>
           <script src="app/answer_poll/answer_poll.service.js"></script>
+          <script src="app/crud_api/crud_api.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.directive.js"></script>
           <script src="app/main/main.filter.js"></script>
