--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,6 @@
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
       <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css" />
-      <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
       <link rel="stylesheet" href="bower_components/roboto-fontface/css/roboto-fontface.css" />
       <!-- endbower -->
     <!-- endbuild -->
@@ -24,6 +23,7 @@
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
+    <link rel="stylesheet" href="bower_components/angular-inline-text-editor/ite.css" />
   </head>
   <body ng-app="eduquizzApp">
     <!--[if lt IE 7]>
@@ -54,6 +54,7 @@
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+      <script src="bower_components/angular-inline-text-editor/ite.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-aria/angular-aria.js"></script>
       <script src="bower_components/angular-material/angular-material.js"></script>
@@ -62,8 +63,13 @@
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-      <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/rangy/rangy-core.js"></script>
+      <script src="bower_components/rangy/rangy-classapplier.js"></script>
+      <script src="bower_components/rangy/rangy-highlighter.js"></script>
+      <script src="bower_components/rangy/rangy-selectionsaverestore.js"></script>
+      <script src="bower_components/rangy/rangy-serializer.js"></script>
+      <script src="bower_components/rangy/rangy-textrange.js"></script>
       <script src="bower_components/restangular/dist/restangular.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
@@ -89,6 +95,7 @@
           <script src="app/main/main.filter.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/new_poll/new_poll.controller.js"></script>
+          <script src="app/new_poll/new_poll.directive.js"></script>
           <script src="app/new_poll/new_poll.js"></script>
           <script src="app/new_poll/new_poll.service.js"></script>
           <script src="app/polls/polls.controller.js"></script>
