--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,7 @@
       <script src="bower_components/rangy/rangy-serializer.js"></script>
       <script src="bower_components/rangy/rangy-textrange.js"></script>
       <script src="bower_components/restangular/dist/restangular.js"></script>
+      <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -95,7 +96,6 @@
           <script src="app/main/main.filter.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/new_poll/new_poll.controller.js"></script>
-          <script src="app/new_poll/new_poll.directive.js"></script>
           <script src="app/new_poll/new_poll.js"></script>
           <script src="app/new_poll/new_poll.service.js"></script>
           <script src="app/polls/polls.controller.js"></script>
@@ -112,5 +112,6 @@
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
+        <script src="components/i18n/translations.js"></script>
 </body>
 </html>
