--- a/client/index.html
+++ b/client/index.html
@@ -90,7 +90,6 @@
           <script src="app/answer_poll/answer_poll.controller.js"></script>
           <script src="app/answer_poll/answer_poll.js"></script>
           <script src="app/answer_poll/answer_poll.service.js"></script>
-          <script src="app/crud_api/crud_api.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.directive.js"></script>
           <script src="app/main/main.filter.js"></script>
@@ -106,6 +105,7 @@
           <script src="app/view_answers/view_answers.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
+          <script src="components/i18n/translations.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
