--- a/client/index.html
+++ b/client/index.html
@@ -101,6 +101,9 @@
           <script src="app/polls/polls.directive.js"></script>
           <script src="app/polls/polls.js"></script>
           <script src="app/polls/polls.service.js"></script>
+          <script src="app/upload/upload.controller.js"></script>
+          <script src="app/upload/upload.directive.js"></script>
+          <script src="app/upload/upload.service.js"></script>
           <script src="app/view_answers/view_answers.controller.js"></script>
           <script src="app/view_answers/view_answers.js"></script>
           <script src="components/auth/auth.service.js"></script>
