--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,8 @@
       <script src="bower_components/restangular/dist/restangular.js"></script>
       <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
       <!-- endbower -->
+      <script src="bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
+      <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
 
