--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
       <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css" />
       <link rel="stylesheet" href="bower_components/roboto-fontface/css/roboto-fontface.css" />
+      <link rel="stylesheet" href="bower_components/ng-img-crop/compile/minified/ng-img-crop.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -72,6 +73,8 @@
       <script src="bower_components/rangy/rangy-textrange.js"></script>
       <script src="bower_components/restangular/dist/restangular.js"></script>
       <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
+      <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+      <script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
       <!-- endbower -->
       <script src="bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
       <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
