move to new files

--- a/client/index.html
+++ b/client/index.html
@@ -95,13 +95,14 @@
           <script src="app/answer_poll/answer_poll.controller.js"></script>
           <script src="app/answer_poll/answer_poll.js"></script>
           <script src="app/answer_poll/answer_poll.service.js"></script>
+          <script src="app/edit_poll/edit_poll.controller.js"></script>
+          <script src="app/edit_poll/edit_poll.directive.js"></script>
+          <script src="app/edit_poll/edit_poll.js"></script>
+          <script src="app/edit_poll/edit_poll.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.directive.js"></script>
           <script src="app/main/main.filter.js"></script>
           <script src="app/main/main.js"></script>
-          <script src="app/new_poll/new_poll.controller.js"></script>
-          <script src="app/new_poll/new_poll.js"></script>
-          <script src="app/new_poll/new_poll.service.js"></script>
           <script src="app/polls/polls.controller.js"></script>
           <script src="app/polls/polls.directive.js"></script>
           <script src="app/polls/polls.js"></script>
