Update ngquill to own repo

--- a/client/index.html
+++ b/client/index.html
@@ -82,7 +82,7 @@
       <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
       <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
       <script src="bower_components/quill/dist/quill.min.js"></script>
-      <script src="bower_components/ngQuill/src/ng-quill.min.js"></script>
+      <script src="bower_components/ngQuill/src/ng-quill.js"></script>
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
 
