--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,8 @@
       <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
       <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
       <script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
+      <script src="bower_components/quill/dist/quill.js"></script>
+      <script src="bower_components/ngQuill/src/ng-quill.min.js"></script>
       <!-- endbower -->
       <script src="bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
       <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
@@ -113,6 +115,7 @@
           <script src="app/polls/polls.service.js"></script>
           <script src="app/upload/upload.controller.js"></script>
           <script src="app/view_answers/view_answers.controller.js"></script>
+          <script src="app/view_answers/view_answers.filter.js"></script>
           <script src="app/view_answers/view_answers.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
