--- a/client/index.html
+++ b/client/index.html
@@ -105,6 +105,7 @@
           <script src="app/edit_poll/edit_poll.controller.js"></script>
           <script src="app/edit_poll/edit_poll.directive.js"></script>
           <script src="app/edit_poll/edit_poll.js"></script>
+          <script src="app/i18n/translations.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.directive.js"></script>
           <script src="app/main/main.filter.js"></script>
@@ -119,13 +120,11 @@
           <script src="app/view_answers/view_answers.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
-          <script src="components/i18n/translations.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
-        <script src="components/i18n/translations.js"></script>
 </body>
 </html>
