--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,7 @@
       <script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
       <script src="bower_components/quill/dist/quill.js"></script>
       <script src="bower_components/ngQuill/src/ng-quill.min.js"></script>
+      <script src="bower_components/FileSaver/FileSaver.js"></script>
       <!-- endbower -->
       <script src="bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
       <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
