--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,7 @@
       <script src="bower_components/quill/dist/quill.js"></script>
       <script src="bower_components/ngQuill/src/ng-quill.min.js"></script>
       <script src="bower_components/FileSaver/FileSaver.js"></script>
+      <script src="bower_components/q/q.js"></script>
       <!-- endbower -->
       <script src="bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
       <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
@@ -98,6 +99,7 @@
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
+          <script src="app/admin/add_user/add_user.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/answer_poll/answer_poll.controller.js"></script>
