update index with new dependencies

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,8 @@
       <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
       <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css" />
       <link rel="stylesheet" href="bower_components/roboto-fontface/css/roboto-fontface.css" />
-      <link rel="stylesheet" href="bower_components/ng-img-crop/compile/minified/ng-img-crop.css" />
+      <link rel="stylesheet" href="bower_components/cropper/dist/cropper.css" />
+      <link rel="stylesheet" href="bower_components/ng-cropper/dist/ngCropper.all.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -76,11 +77,12 @@
       <script src="bower_components/restangular/dist/restangular.js"></script>
       <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
       <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
-      <script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
       <script src="bower_components/quill/dist/quill.js"></script>
       <script src="bower_components/ngQuill/src/ng-quill.min.js"></script>
       <script src="bower_components/FileSaver/FileSaver.js"></script>
       <script src="bower_components/q/q.js"></script>
+      <script src="bower_components/cropper/dist/cropper.js"></script>
+      <script src="bower_components/ng-cropper/dist/ngCropper.all.js"></script>
       <!-- endbower -->
       <script src="bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
       <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
@@ -118,6 +120,7 @@
           <script src="app/polls/polls.js"></script>
           <script src="app/polls/polls.service.js"></script>
           <script src="app/upload/upload.controller.js"></script>
+          <script src="app/upload/upload.directive.js"></script>
           <script src="app/view_answers/view_answers.controller.js"></script>
           <script src="app/view_answers/view_answers.filter.js"></script>
           <script src="app/view_answers/view_answers.js"></script>
