--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,6 @@
     <![endif]-->
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
-      <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -55,6 +54,7 @@
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/rangy/rangy-core.js"></script>
       <script src="bower_components/rangy/rangy-classapplier.js"></script>
       <script src="bower_components/rangy/rangy-highlighter.js"></script>
@@ -65,7 +65,7 @@
       <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
       <script src="bower_components/quill/dist/quill.js"></script>
       <script src="bower_components/ngQuill/src/ng-quill.min.js"></script>
-      <script src="bower_components/FileSaver/FileSaver.js"></script>
+      <script src="bower_components/FileSaver/dist/FileSaver.min.js"></script>
       <script src="bower_components/q/q.js"></script>
       <script src="bower_components/ng-cropper/dist/ngCropper.all.js"></script>
       <script src="bower_components/lodash/lodash.js"></script>
