--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,8 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <!-- build:js({client,node_modules}) app/vendor.js -->
+      <script src="bower_components/socket.io-client/lib/socket.js"></script>
+      <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
       <!-- bower:js -->
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -76,7 +78,6 @@
       <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
       <script src="bower_components/quill/dist/quill.min.js"></script>
       <script src="bower_components/ngQuill/src/ng-quill.js"></script>
-      <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
 
 
