HOTFIX THIS IS NOT SUITABLE ON THE LONG TERM

--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,15 @@
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
+
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular-animate.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-aria.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular-cookies.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular-resource.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular-sanitize.min.js"></script>
+    <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
+
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <script src="bower_components/socket.io-client/lib/socket.js"></script>
       <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
